1.0
* Start semantic versioning
* IntoIterator no longer heap allocates
* Implement collection range api
* Implement DoubleEndedIterator
* insert_sorted improved

0.1.2
Initial public release